--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "prepublishOnly": "npm run build:share"
   },
   "dependencies": {
-    "axios": "^0.17.1"
+    "axios": "^0.17.1",
+    "car-query": "^1.0.4",
+    "install": "^0.11.0",
+    "npm": "^6.0.0"
   },
   "repository": {
     "type": "git",
