--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "prestart": "npm run build",
     "start": "nodemon src/index.js --exec babel-node --presets es2015,stage-2",
+    "dev": "npm run start",
     "pretest": "npm run build",
     "test": "npm run build && mocha --compilers js:babel-core/register",
     "build": "babel src -d lib --presets es2015,stage-2",
@@ -41,7 +42,7 @@
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
-    "mocha": "^3.5.3",
+    "mocha": "^5.2.0",
     "nodemon": "^1.12.5"
   }
 }
